Bug 94281 - display error when reading full story on tweakers.net
Summary: display error when reading full story on tweakers.net
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: 1.0-beta8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: George Staikos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-02 15:59 UTC by Bart Cerneels
Modified: 2004-12-04 03:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
screenshot of akregator when reading full story on tweakers.net (58.30 KB, image/png)
2004-12-02 16:01 UTC, Bart Cerneels
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Cerneels 2004-12-02 15:59:18 UTC
Version:           1.0-beta8 (using KDE 3.3.1, Gentoo)
Compiler:          gcc version 3.4.2 20041025 (Gentoo Linux 3.4.2-r3, ssp-3.4.1-1, pie-8.7.6.5)
OS:                Linux (i686) release 2.6.9-gentoo-r1n

The problem is that a flash animation that should go above the text end up over the text. I doesn't appear there immediately but pops up after about 1 second.
I also noticed that aKregator doesn't show tweakers.net like konqueror does, it doesn't show the menu on top of the page and the news entry's on the right. This is probably the reason why the flash animation ends up over the text.

I'll attach a screenshot.
Comment 1 Bart Cerneels 2004-12-02 16:01:28 UTC
Created attachment 8521 [details]
screenshot of akregator when reading full story on tweakers.net
Comment 2 George Staikos 2004-12-02 19:15:07 UTC
Javascript is disabled in aKregator by design (I guess for security reasons).

    setJScriptEnabled(false);
    setJavaEnabled(true);
    setMetaRefreshEnabled(true);
    setPluginsEnabled(true);
    setDNDEnabled(true);
    setAutoloadImages(true);
    setStatusMessagesEnabled(true);     <----- I think this should be disabled

Now, I don't see any security issues with javascript since they're self-contained KHTML parts loading from the web.  It's not like e-mail where the content is pushed to you in a sense.  Any opinions?
Comment 3 Bart Cerneels 2004-12-02 23:02:38 UTC
I chose to watch this feed, that meens I trust the people who publish it.
So if activating javascript solves this bug I'm for it.
Comment 4 George Staikos 2004-12-04 02:56:55 UTC
Ok I have a solution.  I think javascript should be enabled for clicked links, but not in the viewer for data from the RSS feed itself.  I will change it accordingly.
Comment 5 George Staikos 2004-12-04 03:09:45 UTC
CVS commit by staikos: 

Enable JavaScript for browser panes, but disable it for the article viewer.
The article viewer is a "push" so we shouldn't allow it, but the clicked links
tabs should support it since they're user-triggered actions to view a web page.

BUG: 94281


  M +1 -0      akregator_view.cpp   1.182
  M +13 -2     viewer.cpp   1.28
  M +1 -0      viewer.h   1.16


--- kdenonbeta/akregator/src/akregator_view.cpp  #1.181:1.182
@@ -202,4 +202,5 @@ aKregatorView::aKregatorView( aKregatorP
     
     m_articleViewer = new ArticleViewer(m_articleSplitter, "article_viewer");
+    m_articleViewer->setSafeMode();  // disable JS, Java, etc...
 
     connect( m_articleViewer, SIGNAL(urlClicked(const KURL&, bool)),

--- kdenonbeta/akregator/src/viewer.cpp  #1.27:1.28
@@ -31,6 +31,5 @@ Viewer::Viewer(QWidget *parent, const ch
     : KHTMLPart(parent, name), m_url(0)
 {
-    // to be on a safe side
-    setJScriptEnabled(false);
+    setJScriptEnabled(true);
     setJavaEnabled(true);
     setMetaRefreshEnabled(true);
@@ -207,4 +206,16 @@ void Viewer::slotPrint( )
 }
 
+
+void Viewer::setSafeMode()
+{
+    setJScriptEnabled(false);
+    setJavaEnabled(false);
+    setMetaRefreshEnabled(false);
+    setPluginsEnabled(false);
+    setDNDEnabled(true);
+    setAutoloadImages(true);
+    setStatusMessagesEnabled(false);
+}
+
 #include "viewer.moc"
 

--- kdenonbeta/akregator/src/viewer.h  #1.15:1.16
@@ -37,4 +37,5 @@ namespace Akregator
             void slotScrollDown();
             void slotPrint();
+            void setSafeMode();
         
         signals: