Enable JavaScript for browser panes, but disable it for the article viewer. The article viewer is a "push" so we shouldn't allow it, but the clicked links tabs should support it since they're user-triggered actions to view a web page.

BUG: 94281

svn path=/trunk/kdepim/akregator/; revision=368265